--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@editorjs/quote": "^2.2.0",
     "@editorjs/simple-image": "^1.3.1",
     "@editorjs/table": "^1.2.0",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
